# SFML-Game-Development-Book

./: .gitignore  CMakeLists.txt  License.txt  ReadMe.txt
01_Intro/Include/Book/: Game.hpp
01_Intro/Source/: CMakeLists.txt  Game.cpp  Main.cpp
02_Resources/Source/: CMakeLists.txt  Main.cpp
03_World/Include/Book/: Aircraft.hpp  Entity.hpp  Game.hpp  SceneNode.hpp  SpriteNode.hpp  World.hpp
03_World/Source/: Aircraft.cpp  CMakeLists.txt  Entity.cpp  Game.cpp  SceneNode.cpp  World.cpp
04_Input/Include/Book/: Aircraft.hpp  Entity.hpp  Game.hpp  Player.hpp  ResourceIdentifiers.hpp  SceneNode.hpp  StringHelpers.hpp
04_Input/Source/: Aircraft.cpp  CMakeLists.txt  Game.cpp  Main.cpp  World.cpp
05_States/Include/Book/: Aircraft.hpp  Category.hpp  GameState.hpp  LoadingState.hpp  MenuState.hpp  ParallelTask.hpp  PauseState.hpp  ResourceIdentifiers.hpp  State.hpp  StateIdentifiers.hpp  Utility.hpp  World.hpp
05_States/Source/: Application.cpp  CMakeLists.txt  Entity.cpp  GameState.cpp  LoadingState.cpp  MenuState.cpp  ParallelTask.cpp  PauseState.cpp  Player.cpp  StateStack.cpp  TitleState.cpp  Utility.cpp
06_Menus/Include/Book/: Aircraft.hpp  Application.hpp  Button.hpp  Command.hpp  CommandQueue.hpp  Container.hpp  Label.hpp  Player.hpp  ResourceIdentifiers.hpp  StateIdentifiers.hpp  Utility.hpp  Utility.inl
06_Menus/Source/: Aircraft.cpp  Application.cpp  CMakeLists.txt  Component.cpp  MenuState.cpp  Player.cpp  SceneNode.cpp  SettingsState.cpp  SpriteNode.cpp  State.cpp  Utility.cpp
07_Gameplay/Include/Book/: Aircraft.hpp  Category.hpp  DataTables.hpp  Entity.hpp  MenuState.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SettingsState.hpp  StateIdentifiers.hpp  Utility.hpp  World.hpp
07_Gameplay/Source/: Aircraft.cpp  Application.cpp  Button.cpp  CMakeLists.txt  DataTables.cpp  Entity.cpp  GameState.cpp  MenuState.cpp  PauseState.cpp  Pickup.cpp  Player.cpp  Projectile.cpp  SceneNode.cpp  SettingsState.cpp  Utility.cpp  World.cpp
08_Graphics/Include/Book/: Aircraft.hpp  Button.hpp  Category.hpp  Component.hpp  DataTables.hpp  Label.hpp  Particle.hpp  PauseState.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  StateStack.hpp  World.hpp
08_Graphics/Media/Shaders/: Brightness.frag  Fullpass.vert
08_Graphics/Source/: Aircraft.cpp  Application.cpp  Button.cpp  CMakeLists.txt  Command.cpp  Container.cpp  EmitterNode.cpp  GameState.cpp  Label.cpp  ParticleNode.cpp  Pickup.cpp  Player.cpp  PostEffect.cpp  Projectile.cpp  TextNode.cpp  Utility.cpp  World.cpp
09_Audio/Include/Book/: Aircraft.hpp  Application.hpp  BloomEffect.hpp  Button.hpp  Category.hpp  Command.hpp  Entity.hpp  GameOverState.hpp  MusicPlayer.hpp  PauseState.hpp  Pickup.hpp  Player.hpp  ResourceIdentifiers.hpp  SoundNode.hpp  State.hpp  TextNode.hpp  TitleState.hpp  Utility.hpp  World.hpp
09_Audio/Media/Shaders/: Brightness.frag  GuassianBlur.frag
09_Audio/Source/: Aircraft.cpp  Application.cpp  Button.cpp  CMakeLists.txt  CommandQueue.cpp  DataTables.cpp  Entity.cpp  GameOverState.cpp  GameState.cpp  Main.cpp  MenuState.cpp  PauseState.cpp  SceneNode.cpp  SettingsState.cpp  State.cpp  TitleState.cpp  World.cpp
10_Network/Include/Book/: Aircraft.hpp  Animation.hpp  Application.hpp  Button.hpp  Category.hpp  EmitterNode.hpp  Entity.hpp  Foreach.hpp  GameOverState.hpp  GameServer.hpp  GameState.hpp  KeyBinding.hpp  MultiplayerGameState.hpp  NetworkNode.hpp  NetworkProtocol.hpp  ParticleNode.hpp  PauseState.hpp  Player.hpp  PostEffect.hpp  Projectile.hpp  SettingsState.hpp  SoundPlayer.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  World.hpp
10_Network/Media/Shaders/: Add.frag  DownSample.frag
10_Network/Source/: Aircraft.cpp  Animation.cpp  Application.cpp  BloomEffect.cpp  CMakeLists.txt  DataTables.cpp  Entity.cpp  GameOverState.cpp  GameServer.cpp  GameState.cpp  KeyBinding.cpp  MenuState.cpp  MultiplayerGameState.cpp  MusicPlayer.cpp  NetworkNode.cpp  PauseState.cpp  Player.cpp  SettingsState.cpp  SoundNode.cpp  SoundPlayer.cpp  State.cpp  StateStack.cpp  Utility.cpp  World.cpp
